Added name and bio info - basic css

--- a/bio.html
+++ b/bio.html
@@ -7,6 +7,12 @@
         <script src="script.js"></script>
     </head>
     <body>
-
+        <div class="header">
+            <h1>Leo Knox</h1>
+            <div class="headcontact">
+                <h4>addr@email.com</h4>
+                <h4>206-555-1234</h4>
+            </div>
+        </div>
     </body>
 </html>
